# kps-1

./: CUSTOM_FEATURES_GUIDE.md  FEATURE_ENGINEERING_SUMMARY.md  README.md  examples_feature_engineering.py  ftball.csv  main.py  pyproject.toml  requirements.txt  test_integration.py
kps1/: __init__.py  data.py  experiments.py  feature_engineering.py  models.py  training.py  viz.py
matlab/: INDEX_START_HERE.m  MATLAB_IMPLEMENTATION_SUMMARY.md  MATLAB_VERSION_README.md  MIGRATION_GUIDE.m  QUICK_REFERENCE.m  buildCFNN.m  buildFNN.m  computeLoss.m  examples_and_comparison.m  football_prediction_main.m  load_and_prepare_data.m  predict.m  trainNetwork.m
