[project]
name = "kps-1"
version = "0.1.0"
description = ""
authors = [
    {name = "gleb",email = "deffender1337@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "keras (>=3.13.2,<4.0.0)",
    "tensorflow (>=2.16.1,<3.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "kagglehub (>=0.4.2,<0.5.0)",
    "pandas (>=2.2.3,<3.0.0)",
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
